--- a/cli/package.json
+++ b/cli/package.json
@@ -4,6 +4,9 @@
   "type": "module",
   "description": "",
   "main": "index.js",
+  "bin": {
+    "composter": "./src/index.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
