--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,5 @@
-VITE_API_BASE_URL=http://localhost:3000
+# Development
+# VITE_API_BASE_URL=http://localhost:3000
+
+# Production (set in Vercel dashboard)
+VITE_API_BASE_URL=https://composter.onrender.com
