--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "backend",
+  "name": "@composter/api",
   "version": "1.0.0",
+  "private": true,
   "description": "",
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "PORT=3000 node index.js",
     "build": "npm install && npx prisma generate && npx prisma migrate deploy",
-    "dev": "nodemon index.js",
+    "dev": "PORT=3000 nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "postinstall": "prisma generate"
   },
@@ -19,6 +20,7 @@
     "better-auth": "^1.3.34",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
+    "drizzle-orm": "^0.45.1",
     "express": "^5.1.0",
     "nodemon": "^3.1.11",
     "pg": "^8.16.3"
