--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "composter-cli",
+  "name": "@composter/cli",
   "version": "1.0.14",
+  "private": false,
   "type": "module",
   "description": "Your personal vault for React components. Push, pull, and sync reusable components across projects — like shadcn/ui but for YOUR code.",
   "main": "src/index.js",
