--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,7 +43,14 @@ jobs:
         run: |
           npm install
           npx prisma generate
-          npx prisma migrate deploy || true
+          if [ -n "$DATABASE_URL" ]; then
+            # If a previous migration failed but the DB was updated manually,
+            # mark the specific migration as applied to allow subsequent migrations.
+            npx prisma migrate resolve --applied 20251224101333_add_unique_contraint || true
+            npx prisma migrate deploy || true
+          else
+            echo "DATABASE_URL not set — skipping prisma migrate deploy"
+          fi
 
       - name: Run Turbo Pipeline
         run: npx turbo run build lint
