--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,7 +55,7 @@ jobs:
       - name: Run Turbo Pipeline
         run: npx turbo run build lint
         env:
-          DATABASE_URL: "postgresql://dummy:password@localhost:5432/mydb"
-          BETTER_AUTH_SECRET: "dummy_secret"
-          BETTER_AUTH_URL: "http://localhost:3000"
-          CLIENT_URL: "http://localhost:5173"
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
+          BETTER_AUTH_SECRET: ${{ secrets.BETTER_AUTH_SECRET }}
+          BETTER_AUTH_URL: ${{ secrets.BETTER_AUTH_URL }}
+          CLIENT_URL: ${{ secrets.CLIENT_URL }}
