--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,24 +27,20 @@ jobs:
           cache: "npm"
 
       # 2️⃣ Install Dependencies (With Dummy Env)
-      # We provide a fake URL so the 'postinstall' (prisma generate) script doesn't crash.
       - name: Install Dependencies
         run: npm ci
         env:
           DATABASE_URL: "postgresql://dummy:password@localhost:5432/mydb"
           BETTER_AUTH_SECRET: "dummy_secret_for_install"
 
-      # 3️⃣ Generate Prisma Client (Safe Mode)
-      # Explicitly generate the client so the build has the types it needs.
+      # 3️⃣ Generate Prisma Client (Direct Command)
+      # ⚠️ FIX: We run prisma directly here instead of via Turbo
       - name: Generate Prisma Client
-        run: npx turbo run generate --filter=@composter/api
+        run: npx prisma generate --schema=apps/api/prisma/schema.prisma
         env:
           DATABASE_URL: "postgresql://dummy:password@localhost:5432/mydb"
-          # If you don't have a "generate" script in package.json, 
-          # you can use: npx prisma generate --schema=apps/api/prisma/schema.prisma
 
-      # 4️⃣ Run Turbo Pipeline (Build & Lint)
-      # We use dummy variables because we are only compiling code, not running it.
+      # 4️⃣ Run Turbo Pipeline (Build & Lint only)
       - name: Run Turbo Pipeline
         run: npx turbo run build lint
         env:
