--- a/packages/cli/.env.example
+++ b/packages/cli/.env.example
@@ -1,6 +1,8 @@
 # Composter API URL
 # For LOCAL development:
 # BASE_URL="http://localhost:3000/api"
+# DEBUG=0 set 1 if you want to enable debug logs (stack trace)
 
 # For PRODUCTION:
 BASE_URL="https://composter.vercel.app/api"
+DEBUG=0 
